@@ -20,6 +20,7 @@
 #include <grub/machine/memory.h>
 #include <grub/err.h>
 #include <grub/types.h>
+#include <grub/misc.h>
 
 grub_err_t
 grub_machine_mmap_iterate (int NESTED_FUNC_ATTR (*hook) (grub_uint64_t, grub_uint64_t, grub_uint32_t))
@@ -27,6 +28,8 @@ grub_machine_mmap_iterate (int NESTED_FUNC_ATTR (*hook) (grub_uint64_t, grub_uin
   grub_uint32_t cont;
   struct grub_machine_mmap_entry *entry
     = (struct grub_machine_mmap_entry *) GRUB_MEMORY_MACHINE_SCRATCH_ADDR;
+
+  grub_memset (entry, 0, sizeof (entry));
 
   /* Check if grub_get_mmap_entry works.  */
   cont = grub_get_mmap_entry (entry, 0);
@@ -42,6 +45,8 @@ grub_machine_mmap_iterate (int NESTED_FUNC_ATTR (*hook) (grub_uint64_t, grub_uin
 
 	if (! cont)
 	  break;
+
+	grub_memset (entry, 0, sizeof (entry));
 
 	cont = grub_get_mmap_entry (entry, cont);
       }
